--- a/index.html
+++ b/index.html
@@ -9,6 +9,37 @@
     <title></title>
   </head>
   <body>
-
+    <div class="container">
+      <div class="jumbotron text_centered">
+        <h1>What up yo</h1>
+      </div>
+      <div class="row"> <!--Row 1-->
+        <div class="col-md-2"></div>
+          <div class="col-md-8">
+            <form id="numInput" class="" action="index.html" method="post">
+              <div class="form-group">
+                <label for="userInput">The magical ping-pong number counter:</label>
+                <input type="number" class="form-control" id="userInput" placeholder="Please enter a number between 1 and 1000">
+                <small id="inputHelp" class="form-text text-muted">We will count to your chosen number, with special effects for each number divisible by 3, 5 or 15.</small>
+              </div>
+              <button type="submit" name="button" class="center-block">Submit!</button>
+            </form>
+          </div>
+        <div class="col-md-2"></div>
+      </div> <!--End Row 1-->
+      <div class="row"> <!--Row 2-->
+        <div class="col-md-2"></div>
+          <div class="col-md-8">
+            <!-- <ul class="text_white">
+              <li></li>
+            </ul> -->
+            <span id="output">
+              <ul id="list">
+              </ul>
+            </span>
+          </div>
+        <div class="col-md-2"></div>
+      </div> <!--End Row 2-->
+    </div>
   </body>
 </html>
