simplify list generation and add small fadein effect

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               <li></li>
             </ul> -->
             <span id="output">
-              <ul id="list">
+              <ul id="list" class="text_white">
               </ul>
             </span>
           </div>
