add slider which changes the speed at which the list items fade in to view

--- a/index.html
+++ b/index.html
@@ -30,16 +30,20 @@
       <div class="row"> <!--Row 2-->
         <div class="col-md-2"></div>
           <div class="col-md-8">
-            <!-- <ul class="text_white">
-              <li></li>
-            </ul> -->
+            <input id="speedSlider" type="range" min="100" max="700" step="100"/>
+          </div>
+        <div class="col-md-2"></div>
+      </div> <!--End Row 2-->
+      <div class="row"> <!--Row 3-->
+        <div class="col-md-2"></div>
+          <div class="col-md-8">
             <span id="output">
               <ul id="list" class="text_white">
               </ul>
             </span>
           </div>
         <div class="col-md-2"></div>
-      </div> <!--End Row 2-->
+      </div> <!--End Row 3-->
     </div>
   </body>
 </html>
