change slider value from min:100 max:700 to min:-700 max:-100 and multiply value by -1 to get a positive number; this allows slider to be set from slowest (700) to fastest(100)

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               </div>
               <div id="sliderContainer">
                 <label class="text_white">Adjust Speed of Counting</label>
-                <input id="speedSlider" type="range" min="100" max="700" step="100"/>
+                <input id="speedSlider" type="range" min="-700" max="-100" step="-700" value="-700"/>
               </div>
               <button type="submit" name="button" class="center-block">Submit!</button>
             </form>
