--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
   <body>
     <div class="container">
       <div class="jumbotron text_centered">
-        <h1>What up yo</h1>
+        <h2>Ping Pong Number Counter</h2>
       </div>
       <div class="row"> <!--Row 1-->
         <div class="col-md-2"></div>
           <div class="col-md-8">
             <form id="numInput" class="text_centered" action="index.html" method="post">
               <div class="form-group">
-                <label for="userInput" class="text_white">The magical ping-pong number counter:</label>
+                <label for="userInput" class="text_white">Behold:</label>
                 <input type="number" class="form-control text_white" id="userInput">
                 <!-- <small id="inputHelp" class="form-text text-muted">We will count to your chosen number, with special effects for each number divisible by 3, 5 or 15.</small> -->
                 <label for="belowUserInput"class="text_white">Any number divisible by 3, 5 or 15 will ping or pong!</label>
