--- a/index.html
+++ b/index.html
@@ -20,11 +20,10 @@
               <div class="form-group">
                 <label for="userInput" class="text_white">Behold:</label>
                 <input type="number" class="form-control text_white" id="userInput">
-                <!-- <small id="inputHelp" class="form-text text-muted">We will count to your chosen number, with special effects for each number divisible by 3, 5 or 15.</small> -->
                 <label for="belowUserInput"class="text_white">Any number divisible by 3, 5 or 15 will ping or pong!</label>
               </div>
               <div id="sliderContainer">
-                <label class="text_white">Adjust Speed of Counting</label>
+                <label class="text_white">Adjust Counting Speed</label>
                 <input id="speedSlider" type="range" min="-700" max="-100" step="-700" value="-700"/>
               </div>
               <button type="submit" name="button" class="center-block">Submit!</button>
